--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "bulkmailer-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.2",
     "nodemailer": "^7.0.5"
